# MLOPS-human-pose-estimation

./: Jenkinsfile  LICENSE  README.md
development/: .dockerignore  .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  docker-compose-app-cpu.yaml  docker-compose-app-gpu.yaml  docker-compose-jenkins.yaml  docker-compose-minio.yaml  docker-compose.yaml  download_data.sh  explore_data.ipynb  generate_subset_label_data.py  pyproject.toml  ruff.toml  task_all.py  task_download_weight_from_minio.py  task_train.py  task_version_data.py
development/.dvc/: config
development/.envs/: minio.txt  mlflow.txt  postgres.txt
development/app/: application.py  utils.py
development/config/: __init__.py  config.yaml  load_cfg.py
development/data/raw/: .gitignore  label_subset.json.dvc
development/docker/: dockerfile.application  dockerfile.jenkins  dockerfile.mlflow
development/logs/: __init__.py
development/src/config_schemas/: mlflow_schema.py
development/src/database/: README.md
development/src/inference/: base.py  decode.py  pose_inference.py
development/src/models/: blocks.py  loss.py  networks.py
development/src/training/: base.py  trainer.py
development/src/utils/: augment_data.py  dataset.py  manage_data_path.py  mlflow_utils.py  run_command.py
development/src/weights/: README.md
development/terraform_dev/: .gitignore  cmd_jenkins.txt  main.tf  setup-dockers.sh  variables.tf
production/helm_charts/app/: Chart.yaml  values.yaml
production/terraform/: .gitignore  main.tf  variables.tf
(+78 files in other folders)
